Changed accountStyles.css  and account.php to fix some alignment problems

--- a/css/accountstyles.css
+++ b/css/accountstyles.css
@@ -302,7 +302,7 @@ table.thead, table.tbody {
 
 #contactfieldset {
   width: 80%;
-  height: 88%;
+  height: 92%;
   padding: 10px;
 }
 
@@ -516,6 +516,8 @@ table.thead, table.tbody {
 #passwordfieldset {
     height: 38%;
     width: 100%;
+    text-align: center;
+    margin-bottom: 83%;
 }
 
 #passwordcontainer {
